--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <div id="content">
 	<h2>Coming soon</h2>
 	<p>
-		Come back later!
+		Come back later! <br /><br />
+		For now you can <a href="https://www.facebook.com/ChannelSurfersTV">follow us on Facebook</a>.
 	</p>
 	<br/>
 </div>
