--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <div id="content">
 	<h2>Coming soon</h2>
 	<p>
-		Come back later! <br /><br />
-		For now you can <a href="https://www.facebook.com/ChannelSurfersTV">follow us on Facebook</a>.
+		Catch our stream <a href="https://www.twitch.tv/ChannelSurfersTV">on Twitch</a>!
+		For now you can follow us on <a href="https://www.facebook.com/ChannelSurfersTV">Facebook</a> or <a href="https://www.twitter.com/SurfersTV">Twitter</a>.
 	</p>
 	<br/>
 </div>
