all in one page

--- a/index.html
+++ b/index.html
@@ -28,16 +28,58 @@
 	</header>
 </div>
 
-
-
-<div id="content">
-	<h2>Coming soon</h2>
+<div class="content" id="about" style="margin-top: 130px;">
+	<h2>About</h2>
 	<p>
-		Catch our stream <a href="https://www.twitch.tv/ChannelSurfersTV">on Twitch</a>!
-		For now you can follow us on <a href="https://www.facebook.com/ChannelSurfersTV">Facebook</a> or <a href="https://www.twitter.com/SurfersTV">Twitter</a>.
+		Channel Surfers is a competitive platforming game that takes place in a TV screen. Try to outrun your opponents by dodging obstacles while surfing through TV channels, but watch out, the public has control over the remote!<br/><br/>
+		Currently in development for the Ubisoft Contest.
 	</p>
 	<br/>
 </div>
+
+<div class="content" id="team">
+	<h2>The Team</h2>
+	<p style="text-align:center;">
+		That's us. We made the game.
+	</p>
+	
+	<div class="side-left">
+		<h3>
+			Designers:
+		</h3>
+		<ul>
+			<li><a href="http://gabfleury.com" target="_blank">Gabriel Fleury</a></li>
+			<li><a href="https://www.vglevels.com/" target="_blank">Vincent Gagnon</a></li>
+			<li><a href="https://ca.linkedin.com/in/juliengrimard" target="_blank">Julien Grimard</a></li>
+			<li><a href="https://jonathanlarosefu.wixsite.com/portfolio" target="_blank">Jonathan Larose</a></li>
+		</ul>
+	</div>
+	
+	<div class="side-right">
+		<h3>
+			Programmers:
+		</h3>
+		<ul>
+			<li><a href="http://justinealmes.com/" target="_blank">Justine Almes</a></li>
+			<li><a href="http://lucasdacosta.fr/" target="_blank">Lucas Da Costa</a></li>
+			<li><a href="https://guillaumeparisportfolio.wordpress.com/" target="_blank">Guillaume Paris</a></li>
+			<li><a href="https://www.linkedin.com/in/jean-baptiste-pommeret-216616129/
+	" target="_blank">Jean-Baptiste Pommeret</a></li>
+		</ul>
+	</div>
+</div>
+
+
+<div class="content" id="links">
+	<h2>Links</h2>
+	<p>
+		For now you can follow us on <a href="https://www.facebook.com/ChannelSurfersTV">Facebook</a> or <a href="https://www.twitter.com/SurfersTV">Twitter</a>.<br/>
+		Catch us when we stream <a href="https://www.twitch.tv/ChannelSurfersTV">on Twitch</a>!
+	</p>
+	<br/>
+</div>
+
+
 
 </body>
 
