--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
 	</header>
 </div>
 
-<div class="content" id="about" style="margin-top: 130px;">
+<div class="content" id="about" >
 	<h2>About</h2>
 	<p>
-		Channel Surfers is a competitive platforming game that takes place in a TV screen. Try to outrun your opponents by dodging obstacles while surfing through TV channels, but watch out, the public has control over the remote!<br/><br/>
-		Currently in development for the Ubisoft Contest.
+		Channel Surfers is a competitive platforming game that takes place in a TV screen. Try to outrun your opponents by dodging obstacles while surfing through TV channels, but watch out, the public has control over the remote!
 	</p>
-	<br/>
+		<div class="video-container">
+			<iframe src="https://www.youtube.com/embed/e0oOzfSuIuM?rel=0&amp;showinfo=0" allowfullscreen="" width="800" height="450" frameborder="0"></iframe>
+		</div>
+	<p style="text-align:center">
+		Prototype developped for the Ubisoft Contest.
+	</p>
 </div>
 
 <div class="content" id="team">
 	<h2>The Team</h2>
 	<p style="text-align:center;">
-		That's us. We made the game.
+		That's us. We made the game!
 	</p>
 	
 	<div class="side-left">
@@ -51,7 +55,7 @@
 			<li><a href="http://gabfleury.com" target="_blank">Gabriel Fleury</a></li>
 			<li><a href="https://www.vglevels.com/" target="_blank">Vincent Gagnon</a></li>
 			<li><a href="https://ca.linkedin.com/in/juliengrimard" target="_blank">Julien Grimard</a></li>
-			<li><a href="https://jonathanlarosefu.wixsite.com/portfolio" target="_blank">Jonathan Larose</a></li>
+			<li><a href="https://www.jolarose.com/" target="_blank">Jonathan Larose</a></li>
 		</ul>
 	</div>
 	
@@ -73,7 +77,7 @@
 <div class="content" id="links">
 	<h2>Links</h2>
 	<p>
-		For now you can follow us on <a href="https://www.facebook.com/ChannelSurfersTV">Facebook</a> or <a href="https://www.twitter.com/SurfersTV">Twitter</a>.<br/>
+		For now you can follow us on <a href="https://www.facebook.com/ChannelSurfersTV">Facebook</a>, <a href="https://www.youtube.com/channel/UC44UONJ9SH9FOJ5dw7jku2w">YouTube</a> or <a href="https://www.twitter.com/SurfersTV">Twitter</a>.<br/>
 		Catch us when we stream <a href="https://www.twitch.tv/ChannelSurfersTV">on Twitch</a>!
 	</p>
 	<br/>
