added portfolio julien

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 		</h3>
 		<ul>
 			<li><a href="http://gabfleury.com" target="_blank">Gabriel Fleury</a></li>
-			<li><a href="https://www.vglevels.com/" target="_blank">Vincent Gagnon</a></li>
-			<li><a href="https://ca.linkedin.com/in/juliengrimard" target="_blank">Julien Grimard</a></li>
-			<li><a href="https://www.jolarose.com/" target="_blank">Jonathan Larose</a></li>
+			<li><a href="https://www.vglevels.com" target="_blank">Vincent Gagnon</a></li>
+			<li><a href="http://www.jgrimard.com" target="_blank">Julien Grimard</a></li>
+			<li><a href="https://www.jolarose.com" target="_blank">Jonathan Larose</a></li>
 		</ul>
 	</div>
 	
@@ -64,8 +64,8 @@
 			Programmers:
 		</h3>
 		<ul>
-			<li><a href="http://justinealmes.com/" target="_blank">Justine Almes</a></li>
-			<li><a href="http://lucasdacosta.fr/" target="_blank">Lucas Da Costa</a></li>
+			<li><a href="http://justinealmes.com" target="_blank">Justine Almes</a></li>
+			<li><a href="http://lucasdacosta.fr" target="_blank">Lucas Da Costa</a></li>
 			<li><a href="https://guillaumeparisportfolio.wordpress.com/" target="_blank">Guillaume Paris</a></li>
 			<li><a href="https://www.linkedin.com/in/jean-baptiste-pommeret-216616129/
 	" target="_blank">Jean-Baptiste Pommeret</a></li>
