--- a/404.html
+++ b/404.html
@@ -30,13 +30,14 @@
 
 
 
-<div id="content">
+<div class="content">
 	<h2>404</h2>
 	<p>
 		Page not found?????
 	</p>
 	<br/>
 </div>
+
 
 </body>
 
